sass/components/content/_multi-note.scss
.slick-prev, .slick-next {
  border-style: solid;
  border-width: 1px;
  border-color: #eaeaea;
  height: 100%;
  padding-left: 2px;
  padding-right: 21px;
  background-color: #F5F5F5;
}

.multi-note-container {
  border-style: solid;
  border-width: 1px;
  border-color: $border-color;
  margin: 10px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 20px;
  position: relative;
}

.multi-note-slider-container {
  padding-left: 30px;
  padding-right: 30px;
}

.multi-note-page-btn {
  margin-right: 10px;
  padding: 4px;
  border-radius: 0;
}

.multi-note-page-btn:first-child {
  margin-left: 10px;
}

.slick-active.multi-note-page-btn {
  background-color: #C1D4D1;
  border-color: #C1D4D1;
}

.multi-note-thumbnail {
  width: 100px;
  height: 100px;
  cursor: pointer;
  pointer-events: none;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  margin: 0;
  border-radius: 0;
}
@media screen and (max-width: 767px) {
  .multi-note-image {
    text-align: center;
    width: 100%;
    img {
      max-width: 100%;
      max-height: 300px;
    }
  }

  .multi-note-choices {
    margin-top: 10px;
    list-style-type: none;
    text-align: center;
    width: 100%;
    li {
      display: inline;
      .thumbnail {
        display: inherit;
        margin-right: 20px;
      }
    }
  }

}

.thumbnail-video{
  font-size: 63px;
}

.multi-note-image {
  margin-bottom: 15px;
  text-align: center;
  img {
    max-width: 100%;
    max-height: 300px;
  }
}


.multi-note-choices {
  margin-top: 10px;
  list-style-type: none;
  padding-left: 0px;
  li {
    display: inline;
    .thumbnail {
      display: inherit;
      margin-right: 20px;
    }
  }
}

.multi-note-text {
  font-size: 18px;
  white-space: pre-line;
  margin-top: 18px;
}

@media screen and (max-width: 767px){
  .col-md-6 {
    padding-right: 15px;
  }
  .multi-note-image {
    width: 100%;
    margin-bottom: 20px;
    .image-caption-container {
      width: 100%;
      height: auto;
      display: block;
      margin: 0 auto;
      img {
        width: 100%;
        height: auto;
        display: block;
        margin: 0 auto 15px auto;
      }
    }

  }

  .multi-note-choices{
    padding-left: 0px;
    li {
      margin-left: auto;
      margin-right: auto;
      img {
        display: inline;
        margin-left: 5% !important;
        margin-right: 5% !important;
      }
    }
  }

}

